--- a/server/composer.json
+++ b/server/composer.json
@@ -10,6 +10,7 @@
     }
   ],
   "require": {
-    "codeigniter/framework": "3.1.0"
+    "codeigniter/framework": "3.1.0",
+    "hanischit/codeigniter-restserver": "1.0.0"
   }
 }
