--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "angular": "^1.5.8",
     "bootstrap": "^3.3.7",
-    "angular-route": "^1.5.8"
+    "angular-route": "^1.5.8",
+    "angular-file-upload": "^2.3.4"
   }
 }
