--- a/api/composer.json
+++ b/api/composer.json
@@ -10,7 +10,6 @@
     }
   ],
   "require": {
-    "codeigniter/framework": "3.1.0",
-    "hanischit/codeigniter-restserver": "1.0.0"
+    "codeigniter/framework": "3.1.0"
   }
 }
