--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular": "^1.5.8",
     "bootstrap": "^3.3.7",
     "angular-route": "^1.5.8",
-    "angular-file-upload": "^2.3.4"
+    "angular-file-upload": "^2.3.4",
+    "angular-local-storage": "^0.3.0"
   }
 }
